--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.graphql-java/graphql-java -->
+        <dependency>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>graphql-java-tools</artifactId>
+            <version>5.7.1</version>
+        </dependency>
+
 
     </dependencies>
 
